testdata/baselines/reference/submodule/compiler/noDefaultLib.errors.txt
noDefaultLib.ts(4,11): error TS2428: All declarations of 'Array' must have identical type parameters.
lib.es5.d.ts(--,--): error TS2428: All declarations of 'Array' must have identical type parameters.


==== noDefaultLib.ts (1 errors) ====
    /// <reference no-default-lib="true"/>
    var x;
    
    interface Array {}
              ~~~~~
!!! error TS2428: All declarations of 'Array' must have identical type parameters.
    interface String {}
    interface Number {}
    interface Object {}
    interface Date {}
    interface Function {}
    interface RegExp {}